crates/ruff_python_parser/tests/snapshots/invalid_syntax@t_string_unclosed_lbrace.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/t_string_unclosed_lbrace.py
---
## AST

```
Module(
    ModModule {
        range: 0..38,
        body: [
            Expr(
                StmtExpr {
                    range: 0..4,
                    value: TString(
                        ExprTString {
                            range: 0..4,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 0..4,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 2..3,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 3..3,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 5..14,
                    value: TString(
                        ExprTString {
                            range: 5..14,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 5..14,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 7..14,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 8..11,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 15..23,
                    value: TString(
                        ExprTString {
                            range: 15..23,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 15..23,
                                            elements: [
                                                Interpolation(
                                                    TStringInterpolationElement {
                                                        range: 17..22,
                                                        interpolation: Name(
                                                            ExprName {
                                                                range: 18..21,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: Some(
                                                            DebugText {
                                                                leading: "",
                                                                trailing: "=",
                                                            },
                                                        ),
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 24..37,
                    value: TString(
                        ExprTString {
                            range: 24..37,
                            value: TStringValue {
                                inner: Concatenated(
                                    [
                                        TString(
                                            TString {
                                                range: 24..28,
                                                elements: [
                                                    Interpolation(
                                                        TStringInterpolationElement {
                                                            range: 26..27,
                                                            interpolation: Name(
                                                                ExprName {
                                                                    range: 27..27,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                            debug_text: None,
                                                            conversion: None,
                                                            format_spec: None,
                                                        },
                                                    ),
                                                ],
                                                flags: TStringFlags {
                                                    quote_style: Double,
                                                    prefix: Regular,
                                                    triple_quoted: false,
                                                },
                                            },
                                        ),
                                        TString(
                                            TString {
                                                range: 29..37,
                                                elements: [
                                                    Interpolation(
                                                        TStringInterpolationElement {
                                                            range: 33..34,
                                                            interpolation: Name(
                                                                ExprName {
                                                                    range: 34..34,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                            debug_text: None,
                                                            conversion: None,
                                                            format_spec: None,
                                                        },
                                                    ),
                                                ],
                                                flags: TStringFlags {
                                                    quote_style: Double,
                                                    prefix: Regular,
                                                    triple_quoted: true,
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | t"{"
  |    ^ Syntax Error: missing closing quote in string literal
2 | t"{foo!r"
3 | t"{foo="
  |


  |
1 | t"{"
  |     ^ Syntax Error: t-string: unterminated string
2 | t"{foo!r"
3 | t"{foo="
  |


  |
1 | t"{"
  |     ^ Syntax Error: t-string: unterminated string
2 | t"{foo!r"
3 | t"{foo="
  |


  |
1 | t"{"
2 | t"{foo!r"
  |        ^^ Syntax Error: missing closing quote in string literal
3 | t"{foo="
4 | t"{"
  |


  |
1 | t"{"
2 | t"{foo!r"
  |          ^ Syntax Error: t-string: unterminated string
3 | t"{foo="
4 | t"{"
  |


  |
1 | t"{"
2 | t"{foo!r"
  |          ^ Syntax Error: t-string: unterminated string
3 | t"{foo="
4 | t"{"
  |


  |
1 | t"{"
2 | t"{foo!r"
3 | t"{foo="
  | ^^ Syntax Error: t-string: expecting '}'
4 | t"{"
5 | t"""{"""
  |


  |
1 | t"{"
2 | t"{foo!r"
  |          ^ Syntax Error: Expected TStringEnd, found Unknown
3 | t"{foo="
4 | t"{"
  |


  |
1 | t"{"
2 | t"{foo!r"
3 | t"{foo="
  |        ^ Syntax Error: missing closing quote in string literal
4 | t"{"
5 | t"""{"""
  |


  |
1 | t"{"
2 | t"{foo!r"
3 | t"{foo="
  |         ^ Syntax Error: t-string: unterminated string
4 | t"{"
5 | t"""{"""
  |


  |
1 | t"{"
2 | t"{foo!r"
3 | t"{foo="
  |         ^ Syntax Error: t-string: unterminated string
4 | t"{"
5 | t"""{"""
  |


  |
2 | t"{foo!r"
3 | t"{foo="
4 | t"{"
  |    ^ Syntax Error: missing closing quote in string literal
5 | t"""{"""
  |


  |
3 | t"{foo="
4 | t"{"
5 | t"""{"""
  | ^^^^ Syntax Error: Expected TStringEnd, found TStringStart
  |


  |
3 | t"{foo="
4 | t"{"
5 | t"""{"""
  |      ^^^ Syntax Error: Expected an expression
  |


  |
4 | t"{"
5 | t"""{"""
  |         ^ Syntax Error: unexpected EOF while parsing
  |


  |
4 | t"{"
5 | t"""{"""
  |         ^ Syntax Error: t-string: unterminated string
  |
